   (if the srcPos* arguments are all nil, the default aiming location is used as before)
 - block getting NoAccessTeam's LoS-state (patch by Sprunk)
 - block Spring.GetRadarErrorParams for enemy allyteams (patch by Sprunk)
 - implement Path.GetPathNodeCosts
 - Spring.GetMouseState now returns a sixth value indicating if the cursor is offscreen

Rendering
 - add new terrain-mesh renderer (faster than existing code, but does not respect cliffs well)
 - draw bindpose models non-recursively
 - setup alpha-masking for 3DO shadows
 - bump ROAM node-pool size for more demanding maps
 - limit number of ground-scar decals to 4096
 - fix jagged shadows on maps with oblique sun-directions
 - fix grass not receiving shadows; unify groundShadowDensity application
 - fix grass being rendered black in metal-view
 - use clip-control (when possible) to improve depthbuffer precision
 - micro-optimize LuaMatBinSet sorting
 - make shader-flag handling more lightweight
 - do not parse info-textures bound to shaders every single frame
 - nuke {point,line}-smoothing options; selected primitive AA is obsolete with multisampling
 - outsource vsync regulation to SDL2

UI:
 - show a splash-screen while initializing VFS; randomly chosen from any
   .png or .jpg images found under SplashScreenDir defined in springsettings.cfg
   (if SplashScreenDir is a relative path, Spring's CWD will be prepended)
 - Add FPSClampPos config for whether the engine should verify the camera doesn't hit ground/go too far
   this and other FPS camera configs can be changed midgame and will affect the next frame drawn.
 - Add OverheadMaxHeightFactor config - a float multiplier for maximum overhead camera height.
 - skip the IsAbove test/callin for input-receivers when mouse is offscreen
 - show warning if VMware Mesa drivers are installed
 - avoid "Invalid thread number 0" errors if window creation fails
 - rename the 'minimised' CLI flag to 'hidden'